--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.6",
     "@mui/material": "^5.14.5",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
