--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
     "react-router-dom": "^6.15.0",
     "sort-by": "^0.0.2"
   },
