--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
         {
             "src": "/(.*)",
-            "dest": "/frontend/index.html"
+            "dest": "/signup"
           }
     ]
 }
