--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,8 +1,8 @@
 {
     "routes": [
         {
-            "src": "/(.*)",
-            "dest": "/signup"
+            "src": "/signup",
+            "dest": "./index.html"
           }
     ]
 }
