--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-outside-click-handler": "^1.3.0",
     "react-router-dom": "^6.15.0",
     "recoil": "^0.7.7",
     "sort-by": "^0.0.2"
